# Raspberry-Pi-Studio-Daemon

./: CMakeLists.txt  README.md
kobo_notify_project/: README.md  a.out  monitor_sample.cpp  shell_script_sample.sh
script/: launch_studio_daemon.sh
src/: daemon.cpp  main.cpp  run_daemon.h
